# erssi

./: .commitlintrc.json  .gitignore  BUGFIXES-AND-IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL  NEWS  README.md  RELEASE.md  WEECHAT-ANALYSIS.md  cliff.toml  erssi-convert.sh  install-dev.sh  install-erssi.sh  install.sh  irssi.conf  meson.build  meson_options.txt  startup
.github/workflows/: build.yml  check.yml  cifuzz.yml  commitlint.yml  pr-title.yml  release.yml  termuxpkg.yml  voiddocker.yml
docs/: ARCHITECTURE.md  MOUSE-GESTURES-TECHNICAL.md  QUICK_REFERENCE.md  README_ARCHITECTURE.md
docs/postdev/: CLAUDE.md  CREDENTIAL_HOWTO.md  CREDENTIAL_MANAGEMENT_README.md  GESTURE-DEBUG-STATUS.md  INSTALL-SCRIPT.md  test_resize_fix.md
src/: common.h  meson.build
src/core/: core.c  credential-crypto.c  credential.c  credential.h  meson.build  server-rec.h  servers.c  settings.h  utf8.c
src/fe-ansi/: gui-entry.c  gui-expandos.c  gui-mouse.c  gui-printtext.c  gui-printtext.h  gui-readline.c  gui-windows.c  gui-windows.h  irssi.c  lastlog.c  mainwindow-activity.c  mainwindows-layout.c  mainwindows.c  mainwindows.h  meson.build  module-formats.c  module.h  resize-debug.c  resize-debug.h  sidepanels-activity.c  sidepanels-core.c  sidepanels-layout.c  sidepanels-layout.h  sidepanels-render.c  sidepanels-render.h  sidepanels-signals.c  sidepanels-signals.h  sidepanels-types.h  sidepanels.h  statusbar-config.c  statusbar-config.h  statusbar-items.c  statusbar.c  statusbar.h  term-ansi.c  term-ansi.h  textbuffer-commands.c  textbuffer-formats.c  textbuffer-formats.h  textbuffer-view.c  (+2 more)
src/fe-common/core/: fe-common-core.c  fe-core-commands.c  fe-credential.c  fe-credential.h  fe-expandos.c  fe-messages.c  fe-queries.c  formats.c  mentions-window.c  mentions-window.h  meson.build  module-formats.c  module-formats.h
src/fe-common/irc/: meson.build
src/fe-common/irc/dcc/: meson.build
src/fe-common/irc/notifylist/: meson.build
src/fe-fuzz/: irssi.c  server.c
src/fe-fuzz/fe-common/core/: theme-load.c
src/fe-fuzz/irc/core/: event-get-params.c
src/fe-notcurses/: image-preview-cache.c  image-preview-fetch.c  image-preview-render.c  image-preview.c  image-preview.h  meson.build  module.h  term-notcurses.c  term-notcurses.h
src/fe-text/: gui-mouse.c  irssi.c  mainwindows.c  meson.build  module-formats.c  module-formats.h  sidepanels-activity.c  sidepanels-activity.h  sidepanels-core.c  sidepanels-layout.c  sidepanels-layout.h  sidepanels-render.c  sidepanels-render.h  sidepanels-signals.c  sidepanels-types.h  term-terminfo.c  term.c  term.h
src/fe-web/: Makefile  fe-web-client.c  fe-web-json.c  fe-web-server.c  fe-web-signals.c  fe-web-utils.c  fe-web.h  meson.build
src/image-preview/: image-preview-cache.c  image-preview-chafa.c  image-preview-fetch.c  image-preview.c  image-preview.h  meson.build  module.h
src/irc/: meson.build
src/irc/anti-floodnet/: anti-floodnet.c  anti-floodnet.h  floodnet-ctcp.c  floodnet-nick.c  floodnet-stats.c  meson.build  module.h
src/irc/core/: irc-servers-setup.c  irc-servers.c  meson.build
src/irc/dcc/: meson.build
src/irc/flood/: meson.build
src/irc/notifylist/: meson.build
src/otr/: otr-fe.c  otr.c
src/perl/: meson.build
src/perl/common/: meson.build
src/perl/irc/: Dcc.xs  meson.build
src/perl/irc/Irc/: Dcc.pm
src/perl/textui/: TextBuffer.xs  meson.build  module.h
src/perl/ui/: meson.build
tests/: meson.build
tests/fe-ansi/: meson.build  test-paste-join-multiline.c
tests/fe-text/: meson.build
themes/: colorless.theme  default.theme  nexus.theme
utils/: irssi-version.sh
